--- a/src/Components/Resources/search/index.scss
+++ b/src/Components/Resources/search/index.scss
@@ -7,4 +7,8 @@
     width: 450px ;
     line-height: 30px;
     margin: 30px auto;
+
+    &:focus, &:hover {
+        background-color: #dedede;
+    }
 }
