--- a/src/Components/job-cards/job-cards.styles.scss
+++ b/src/Components/job-cards/job-cards.styles.scss
@@ -1,11 +1,13 @@
 .job-card {
-    border: solid white 1px;
     border-radius: 5px;
     margin-bottom: 5px;
     cursor: pointer;
+    padding: 15px 15px;
 
     &:hover {
-        opacity: 0.7;
+        opacity: 0.6;
+        background-color: #dedede;
+        
     }
 
 }
