--- a/src/Components/Resources/search/index.scss
+++ b/src/Components/Resources/search/index.scss
@@ -4,7 +4,7 @@
     border-radius: 30px;
     outline: none;
     padding: 10px;
-    width: 450px ;
+    width: 450px auto;
     line-height: 30px;
     margin: 30px auto;
 
