added carousel to jobs page,added view and contact buttons to jobs-cards

--- a/src/Components/job-cards/job-cards.styles.scss
+++ b/src/Components/job-cards/job-cards.styles.scss
@@ -5,9 +5,15 @@
     padding: 15px 15px;
 
     &:hover {
-        opacity: 0.6;
+        opacity: 0.8;
         background-color: #dedede;
         
     }
 
 }
+
+@media (min-width: 748px) { 
+    .get-in-touch {
+        margin-left: 10px;
+    }
+ }
