--- a/src/Components/Resources/custom-button/custom-button.styles.scss
+++ b/src/Components/Resources/custom-button/custom-button.styles.scss
@@ -1,14 +1,14 @@
 .custom-button {
-    min-width: 165px;
+    min-width: 50px;
     width: auto;
-    height: 50px;
-    letter-spacing: 0.5px;
-    line-height: 50px;
-    padding: 0 35px 0 35px;
+    // height: 50px;
+    // letter-spacing: 0.5px;
+    // line-height: 50px;
+    padding: 0 10px 0 10px;
     font-size: 15px;
-    background-color: black;
+    background-color: #cecece;
     color: white;
-    text-transform: uppercase;
+    // text-transform: uppercase;
     font-family: 'Open Sans Condensed';
     font-weight: bolder;
     border: none;
@@ -17,7 +17,7 @@
     &:hover {
       background-color: white;
       color: black;
-      border: 1px solid black;
+      // border: 1px solid black;
     }
   }
   
