--- a/src/Components/Resources/search/search.styles.scss
+++ b/src/Components/Resources/search/search.styles.scss
@@ -4,11 +4,12 @@
     border-radius: 30px;
     outline: none;
     padding: 10px;
-    width: 450px auto;
+    width: 250px;
     line-height: 30px;
     margin: 30px auto;
 
     &:focus, &:hover {
         background-color: #dedede;
+        width: 450px;
     }
 }
